--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/around_logo.svg" alt="Around logo" />
+        <img src="./images/around_logo.svg" alt="Around logo" class="header__image"/>
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -24,6 +24,76 @@
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button"></button>
+        </section>
+        <section class="cards page__section">
+          <ul class="card__list">
+            <li class="card">
+              <img
+                src="./images/yosemite.jpg"
+                alt="Yosemite Valley"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2>Yosemite Valley</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lake-louise.jpg"
+                alt="Lake Louise"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2>Lake Louise</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/bald-mountains.jpg"
+                alt="Bald Mountains"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2>Bald Mountains<h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/latemar.jpg"
+                alt="Latemar"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2>Latemar</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/vanoise.jpg"
+                alt="Vanoise National Park"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2>Vanoise National Park</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lago.jpg"
+                alt="Lago di Braies"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2>Lago di Braies</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+          </ul>
         </section>
       </main>
     </div>
