--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/around_logo.svg" alt="Around logo" class="header__image"/>
+        <img
+          src="./images/around_logo.svg"
+          alt="Around logo"
+          class="header__image"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -34,7 +38,7 @@
                 class="card__image"
               />
               <div class="card__description">
-                <h2>Yosemite Valley</h2>
+                <h2 class="card__title">Yosemite Valley</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -45,7 +49,7 @@
                 class="card__image"
               />
               <div class="card__description">
-                <h2>Lake Louise</h2>
+                <h2 class="card__title">Lake Louise</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -56,7 +60,7 @@
                 class="card__image"
               />
               <div class="card__description">
-                <h2>Bald Mountains<h2>
+                <h2 class="card__title">Bald Mountains</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -67,7 +71,7 @@
                 class="card__image"
               />
               <div class="card__description">
-                <h2>Latemar</h2>
+                <h2 class="card__title">Latemar</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -78,7 +82,7 @@
                 class="card__image"
               />
               <div class="card__description">
-                <h2>Vanoise National Park</h2>
+                <h2 class="card__title">Vanoise National Park</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -89,12 +93,15 @@
                 class="card__image"
               />
               <div class="card__description">
-                <h2>Lago di Braies</h2>
+                <h2 class="card__title">Lago di Braies</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
           </ul>
         </section>
+        <footer class="footer">
+          <p class="footer__copyright">&copy; 2024 Around the U.S</p>
+        </footer>
       </main>
     </div>
   </body>
