--- a/index.html
+++ b/index.html
@@ -136,5 +136,6 @@
         <p class="footer__copyright">&copy; 2024 Around the U.S</p>
       </footer>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
