--- a/index.html
+++ b/index.html
@@ -136,6 +136,27 @@
         <p class="footer__copyright">&copy; 2024 Around the U.S</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <button class="modal__close" type="button"></button>
+        <p class="modal__heading">Edit Profile</p>
+        <form class="modal__form">
+          <input
+            type="text"
+            name="title"
+            class="modal__form-input"
+            placeholder="Jacques Cousteau"
+          />
+          <input
+            type="text"
+            name="description"
+            class="modal__form-input"
+            placeholder="Explorer"
+          />
+          <button class="modal__button" type="button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
