--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button
               class="profile__edit-button"
+              id="profile-edit-button"
               type="button"
               aria-label="edit-button"
             ></button>
@@ -136,9 +137,13 @@
         <p class="footer__copyright">&copy; 2024 Around the U.S</p>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close" type="button"></button>
+        <button
+          class="modal__close"
+          id="modal-close-button"
+          type="button"
+        ></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
